# godflesh-text-editor

./: Cargo.toml  edit.sh  err.sad  err.txt  gem.toml  readme.md
src/: bar.rs  bnd.rs  common.rs  config.rs  constants.rs  content.rs  dialog.rs  display.rs  gemini.rs  gemstatus.rs  gemtext.rs  main.rs  model.rs  msg.rs  scr.rs  screen.rs  status.rs  tab.rs  table.rs  tabs.rs  text.rs  textview.rs  ui.rs  util.rs  widget.rs
src/gemini/: gemtext.rs  mod.rs  status.rs
src/view/: dialog.rs  mod.rs  model.rs  msg.rs  styles.rs  text.rs  update.rs  widget.rs
